[MDAPI-168] [GRAAL] Add informational properties to the DxFeedGraalNativeSdk.dll library for Windows